# eppo-metrics-sync

./: .gitignore  LICENSE  Makefile  Manifest.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  run_tests.yml
eppo_metrics_sync/: __init__.py  __main__.py  dbt_model_parser.py  eppo_metrics_sync.py  helper.py  validation.py
eppo_metrics_sync/schema/: eppo_metric_schema.json
tests/: context.py  test_cli.py  test_cli_dbt.py  test_dbt.py  test_integration.py  test_validation.py  test_validation_dbt.py
tests/yaml/dbt/invalid/: invalid_entity_tag.yml  missing_entity.yml  missing_timestamp.yml  model_is_not_a_dictionary.yml  no_model_tag.yml  overlapping_tags.yml
tests/yaml/dbt/valid/: no_dbt_tags.yml  no_model_property.yml  schema.yml  valid_schema.yml
tests/yaml/invalid/: duplicated_fact_names.yaml  duplicated_fact_property_names.yaml  duplicated_fact_source_names.yaml  duplicated_metric_names.yaml  invalid_experiment_computation.yaml  invalid_fact_reference.yaml  invalid_guardrail_cutoff_sign.yaml  invalid_metric_type.yaml  invalid_percentile.yaml
tests/yaml/valid/: all_api_fields.yml  fact_source_with_partition_date.yaml  metric_desired_change_override.yaml  percentile_test.yaml  percentile_with_filters.yaml  purchases.yaml
tests/yaml/valid/global_kpis/: net_subcriptions.yaml  net_subcriptions_fact_source.yaml  net_subcriptions_metric.yaml  revenue.yaml  upgrades.yaml
