[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eppo_metrics_sync"
version = "0.1.3"
description = "Sync metrics to Eppo"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyYAML",
    "jsonschema",
    "requests",
]

[tool.setuptools]
include-package-data = true
