[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eppo_metrics_sync"
version = "0.1.12"
description = "Sync metrics to Eppo"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyYAML",
    "jsonschema",
    "requests",
]

[tool.setuptools]
packages = ["eppo_metrics_sync"]

[tool.setuptools.package-data]
eppo_metrics_sync = ["schema/*"]
